<resources>
    <string name="app_name">Includify</string>
    <string name="includify">Includify</string>
    <string name="garlic_bread">Garlic Bread</string>
    <string name="powered_by">powered by</string>

    <string name="hello">Hello</string>
    <string name="enter_your_credentials">Enter your credentials…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="explore">Explore</string>
    <string name="ada_complaint_organisations">ADA Complaint Organisations</string>
    <string name="no_organisations_found">No Organisations Found</string>
    <string name="no_resources_added">No resources added for this organisation</string>
    <string name="usage_instructions">Usage Instructions</string>
    <string name="target_user_category_s">Target User Category(s)</string>
    <string name="resource_type_s">Resource Type(s)</string>
    <string name="contact_name">Contact Name</string>

    <string name="no_desc"><i>No description provided</i></string>
    <string name="no_usage_instr"><i>No usage instructions provided</i></string>
    <string name="no_res_type"><i>No resource types mentioned</i></string>
    <string name="no_target_user_cat"><i>No target user category mentioned</i></string>
    <string name="view_on_map"><u>View on Map</u></string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="medicines">Medicines</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="no_medicines_added">No Medicines Added</string>
    <string name="add">Add</string>
    <string name="enter_contact_details">Enter Contact Details…</string>
    <string name="name">Name</string>
    <string name="relation">Relation</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_medicine_details">Enter Medicine Details…</string>
    <string name="description">Description</string>
    <string name="timing">Timing</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_an_appointment">Schedule An Appointment</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="date">Date</string>
    <string name="resources_needed">Resources Needed</string>
    <string name="visit">Visit</string>
    <string name="no_resources_present">No Resources Present</string>
    <string name="appointments">Appointments</string>
    <string name="no_appointments_scheduled">No appointments scheduled</string>
    <string name="no_resources_booked"><i>No resources booked</i></string>
    <string name="resources_booked">Resources Booked</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="volunteer_details">Volunteer Details</string>
    <string name="no_volunteer_assigned"><i>No volunteer assigned</i></string>
    <string name="appointment_details">Appointment Details</string>
    <string name="enter_your_details">Enter your details…</string>
    <string name="age">Age</string>
    <string name="user_category_s">User Category(s)</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_user_categories_present">No User Categories Present</string>
</resources>